update with more useful content and fonts

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body, main {
 body {
   background-color: black;
   color: white;
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Comfortaa';
   text-align: center;
 }
 
